--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         }
     ],
     "require": {
-        "php": "^7.0|^8.0|^8.1",
-        "laravel/framework": "~5.4|^6.0|^7.0|^8.0|^9.0|^10.0"
+        "php": "^7.0|^8.0|^8.1|^8.2",
+        "laravel/framework": "~5.4|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0"
     },
     "require-dev": {
         "league/flysystem-aws-s3-v3": "^1.0|^3.0",
